dronezone/src/components/logoAnimation.css
.logo-container {
  position: relative;
  display: inline-block;
  text-align: center;
  min-width: 150px; 
  left:150px;
}

/* Responsive adjustments */
@media screen and (max-width: 768px) {
  .logo-container svg {
    width: 20%;
    height: 20%;
  }
  
  .shadow {
    width: 40px;
    height: 15px;
  }
}

@media screen and (max-width: 480px) {
  .logo-container svg {
    width: 10%;
    height: 10%;
  }
  
  .shadow {
    width: 30px;
    height: 10px;
  }
}


/* .shadow::before {
  display: none;
  
} */
.shadow{
  display: block;
  position: absolute;
  top:100%;
  left: 10%;
  width: 50px;
  height: 20px;
  background: rgba(0, 0, 0, 0.3);
  border-radius: 50%;
  transform: translateX(-50%);
  animation: shadow-resize 2s infinite ease-in-out;
}

.animate-bounce-up-and-down:hover {
  animation: bounce 2s infinite ease-in-out;
}

@keyframes bounce {
  0% {
    transform: translateY(0);
  }
  50% {
    transform: translateY(-10px);
  }
  100% {
    transform: translateY(0);
  }
}

@keyframes shadow-resize {
  0% {
    transform: translateX(-50%) scaleX(1);
    opacity: 0.6;
    }
  50% {
    transform: translateX(-50%) scaleX(1.5);
    opacity: 0.4;
     }
  100% {
    transform: translateX(-50%) scaleX(1);
    opacity: 0.6;
    
  }
}

/* Animation for the circles rotation in the dorne now for drone itself */
.animate-rotate:hover {
  transform-box: fill-box;
  transform-origin: center;
  animation: animate-rotate 10s linear infinite;
}

@keyframes animate-rotate {
  from {
    transform: rotate(0deg);
  }
  to {
    transform: rotate(360deg);
  }
}

